--- a/lab3/lab3/lab3.csproj
+++ b/lab3/lab3/lab3.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NEST" Version="7.17.5" />
+    </ItemGroup>
+
 </Project>
