--- a/lab3/lab3/lab3.csproj
+++ b/lab3/lab3/lab3.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="NEST" Version="7.17.5" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
